--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "url": "https://github.com/eupiteco/sed-HOWTO/issues"
   },
   "homepage": "https://github.com/eupiteco/sed-HOWTO#readme",
-	"browserslist": [
-		"last 2 versions"
-	],
+  "browserslist": [
+    "last 2 versions"
+  ],
   "devDependencies": {
     "autoprefixer": "^9.1.5",
+    "cssnano": "^4.1.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4"
+    "gulp-sass": "^4.0.1"
   }
 }
