--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "gulp-watch": "^5.0.1",
+    "gulp-webserver": "^0.9.1"
   }
 }
